--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Login Overlay -->
     <div class="login-overlay" id="loginOverlay">
         <div class="login-card">
-            <h1>Welcome, Kobi</h1>
+            <h1>Welcome, Kairavi</h1>
             <p>A constellation of memories awaits</p>
             <div class="input-group">
                 <input type="text" id="username" placeholder="Username" autocomplete="off">
@@ -59,7 +59,7 @@
                 <svg class="star-icon" fill="currentColor" viewBox="0 0 20 20">
                     <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
                 </svg>
-                <span>Kobi</span>
+                <span>Kairavi</span>
             </div>
         </nav>
 
@@ -383,7 +383,7 @@
 
         <!-- Finale Section -->
         <section class="finale">
-            <h2><span class="initial">Y</span>ou are the place my <span class="initial">H</span>eart always returns to. <span class="initial">L</span>ove you, <span class="initial">K</span>obi</h2>
+            <h2><span class="initial">Y</span>ou are the place my <span class="initial">H</span>eart always returns to. <span class="initial">L</span>ove you, <span class="initial">K</span>airavi</h2>
         </section>
     </div>
 
